@@ -1,4 +1,4 @@
-Machine (P#0 total=6236076KB DMIProductName="Standard PC (i440FX + PIIX, 1996)" DMIProductVersion=pc-i440fx-7.0 DMIProductSerial= DMIChassisVendor=QEMU DMIChassisType=1 DMIChassisVersion=pc-i440fx-7.0 DMIChassisSerial= DMIChassisAssetTag= DMIBIOSVendor="EFI Development Kit II / OVMF" DMIBIOSVersion=0.0.0 DMIBIOSDate=02/06/2015 DMISysVendor=QEMU Backend=Linux LinuxCgroup=/ OSName=Linux OSRelease=5.18.0-rc4 OSVersion="#1 SMP PREEMPT_DYNAMIC Tue Apr 26 11:49:51 CEST 2022" HostName=efi Architecture=x86_64)
+Machine (P#0 total=6236076KB DMIProductName="Standard PC (i440FX + PIIX, 1996)" DMIProductVersion=pc-i440fx-7.0 DMIProductSerial= DMIChassisVendor=QEMU DMIChassisType=1 DMIChassisVersion=pc-i440fx-7.0 DMIChassisSerial= DMIChassisAssetTag= DMIBIOSVendor="EFI Development Kit II / OVMF" DMIBIOSVersion=0.0.0 DMIBIOSDate=02/06/2015 DMISysVendor=QEMU Backend=Linux LinuxCgroup=/ OSName=Linux OSRelease=5.18.0-rc4 OSVersion="#1 SMP PREEMPT_DYNAMIC Tue Apr 26 11:49:51 CEST 2022" HostName=efi Architecture=x86_64 MemoryTiersNr=3)
   Package L#0 (P#0 total=6236076KB CPUVendor=GenuineIntel CPUFamilyNumber=15 CPUModelNumber=107 CPUModel="QEMU Virtual CPU version 2.5+" CPUStepping=1)
     L3Cache L#0 (P#0 total=6236076KB size=16384KB linesize=64 ways=16)
       Group0 L#0 (total=3398608KB)
