@@ -1,4 +1,4 @@
-Machine (P#0 total=358162944KB PlatformName=PowerNV PlatformModel="PowerNV 8335-GTW" Backend=Linux LinuxCgroup=/jjh OSName=Linux OSRelease=4.14.0-49.el7a.bz1553205.page_fault_hang.ppc64le OSVersion="#1 SMP Fri Mar 30 12:06:11 CDT 2018" HostName=c685f8n02 Architecture=ppc64le)
+Machine (P#0 total=358162944KB PlatformName=PowerNV PlatformModel="PowerNV 8335-GTW" Backend=Linux LinuxCgroup=/jjh OSName=Linux OSRelease=4.14.0-49.el7a.bz1553205.page_fault_hang.ppc64le OSVersion="#1 SMP Fri Mar 30 12:06:11 CDT 2018" HostName=c685f8n02 Architecture=ppc64le MemoryTiersNr=2)
   Package L#0 (P#0 total=177025024KB CPUModel="POWER9, altivec supported" CPURevision="2.1 (pvr 004e 1201)")
     NUMANode L#0 (P#0 local=129839104KB total=129839104KB MemoryTier=0)
     NUMANode(GPUMemory) L#1 (P#253 local=15728640KB total=15728640KB PCIBusID=0006:00:00.0 MemoryTier=1)
